Change owner to statnmap

--- a/On-Off_SwitchButton/www/button.css
+++ b/On-Off_SwitchButton/www/button.css
@@ -94,6 +94,14 @@ body {
 .OnOff .onoffswitch-inner:after {
   content: "OFF";
 }
+/* Yes / No */
+.YesNo .onoffswitch-inner:before {
+  content: "YES";
+}
+
+.YesNo .onoffswitch-inner:after {
+  content: "NO";
+}
 /* True / False */
 .TrueFalse .onoffswitch-inner:before {
   content: "TRUE";
